--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
 
     "watch": "npm-run-all build-dev -p watch:*",
-    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
+    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
   "keywords": [],
